added scripts structure and start header

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 
 @charset "UTF-8";
 
+@import "partials/reset";
 @import "partials/variables";
 @import "partials/fonts";
 @import "partials/helpers_mixins";
