--- a/src/styles/partials/_helpers_mixins.scss
+++ b/src/styles/partials/_helpers_mixins.scss
@@ -22,3 +22,15 @@
 		@media only screen and (min-width: $breakpoint) { @content; }
 	}
 }
+
+@mixin clearfix {
+	*zoom: 1;
+	&:before,
+	&:after {
+		content: " ";
+		display: table;
+	}
+	&:after {
+		clear: both;
+	}
+}
