--- a/src/styles/partials/_reset.scss
+++ b/src/styles/partials/_reset.scss
@@ -6,13 +6,18 @@ body {
 
 ul {
 	margin: 0;
+	padding: 0;
 }
 
 li {
 	list-style: none;
 }
 
-a {
+a, a:link, a:hover, a:active, a:focus, a:visited {
 	text-decoration: none;
-	color: #000;
+	color: inherit;
+}
+
+button:focus {
+	outline: none;
 }
