--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -4,6 +4,8 @@
 $verde_base : #00b1b3;
 $azul_base  : #1d5086;
 $cinza_base	: #4d545d;
+$cinza_dark : #3b3f44;
 
 
 $navbar_color : $cinza_base;
+$navbar_color_dark : $cinza_dark;
