--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -1,8 +1,8 @@
 //Styles for the header
 
 header {
+	@extend .section;
 	display: flex;
-	min-height: 580px;
 	background: linear-gradient(-45deg, $verde_base, $azul_base);
 }
 
