--- a/src/styles/partials/_home.scss
+++ b/src/styles/partials/_home.scss
@@ -14,3 +14,30 @@ body {
 	font: 0/0 a;
 	position: absolute;
 }
+
+.section {
+	min-height: 580px;
+}
+
+
+// SECTION-WORK
+
+#section-work {
+	// @extend .section;
+	background-color: $cinza-lighter;
+}
+
+
+// SECTION ABOUT
+
+#section-about {
+	// @extend .section;
+
+}
+
+
+// SECTION CONTACT
+#section-contact {
+	// @extend .section;
+	background-color: $cinza-light;
+}
