--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,10 +1,13 @@
 
 
 //Colors
-$verde_base : #00b1b3;
-$azul_base  : #1d5086;
-$cinza_base	: #4d545d;
-$cinza_dark : #3b3f44;
+$verde_base   : #00b1b3;
+$azul_base    : #1d5086;
+$cinza_dark   : #3b3f44;
+$cinza_base	  : #4d545d;
+$cinza_light  : #586e75;
+$cinza_lighter: #d7d7d7;
+
 
 
 $navbar_color : $cinza_base;
