--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -3,6 +3,7 @@
 //Colors
 $verde_base   : #00b1b3;
 $azul_base    : #1d5086;
+$azul_cinza   : #2c3e50;
 $cinza_dark   : #3b3f44;
 $cinza_base	  : #4d545d;
 $cinza_light  : #586e75;
@@ -12,3 +13,7 @@ $cinza_lighter: #d7d7d7;
 
 $navbar_color : $cinza_base;
 $navbar_color_dark : $cinza_dark;
+
+$section_color: $cinza_lighter;
+
+$footer_color : $azul_cinza;
