--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -10,6 +10,8 @@ $cinza_light  : #586e75;
 $cinza_lighter: #d7d7d7;
 
 
+$text_secondary : $azul_cinza;
+$link_hover : $verde_base;
 
 $navbar_color : $cinza_base;
 $navbar_color_dark : $cinza_dark;
