--- a/src/styles/partials/_reset.scss
+++ b/src/styles/partials/_reset.scss
@@ -16,9 +16,9 @@ li {
 	list-style: none;
 }
 
-a, a:link, a:hover, a:active, a:focus, a:visited {
-	text-decoration: none;
+a {
 	color: inherit;
+	text-decoration: none;
 }
 
 button:focus {
