--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -17,5 +17,6 @@ $navbar_color : $cinza_base;
 $navbar_color_dark : $cinza_dark;
 
 $section_color: $cinza_lighter;
+$section_color_darker : $cinza_light;
 
 $footer_color : $azul_cinza;
