--- a/src/styles/partials/_home.scss
+++ b/src/styles/partials/_home.scss
@@ -128,8 +128,11 @@ body {
 	}
 }
 	.about-me__text {
-		text-align: center;
 		margin-bottom: 40px;
+		text-align: center;
+		p {
+			margin: 5px auto 5px;
+		}
 		@include breakpoint(dog) {
 			width: 50%;
 			margin: 0 auto 40px;
