--- a/src/styles/partials/_home.scss
+++ b/src/styles/partials/_home.scss
@@ -97,6 +97,7 @@ body {
 	}
 	.work-item__desc {
 		margin: 20px 0;
+		padding: 0 10px;
 	}
 	.work-item__link {
 		display: inline-block;
@@ -115,7 +116,7 @@ body {
 .about-me {
 	
 	figure {
-		max-width: 250px;
+		width: 250px;
 		margin: 0 auto 20px;
 		padding: 10px;
 		background-color: white;
@@ -126,16 +127,26 @@ body {
 			border-radius: 100%;
 		}
 	}
+
+	@include breakpoint(dog) {
+		display: grid;
+		grid-template-columns: auto auto;
+		figure {
+			margin: 40px 40px 120px;
+		}
+	}
 }
+
 	.about-me__text {
-		margin-bottom: 40px;
+		margin: 0 auto 40px;
 		text-align: center;
 		p {
 			margin: 5px auto 5px;
 		}
 		@include breakpoint(dog) {
-			width: 50%;
-			margin: 0 auto 40px;
+			text-align: left;
+			margin: 0;
+			padding: 8% 40px 8% 0;
 		}
 	}
 
