added Library project

--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -10,8 +10,14 @@ footer {
 	margin-bottom: 40px;
 	text-align: center;
 }
- .social-media__icon {
- 	display: inline-block;
- 	margin: 10px;
- 	font-size: 3em;
- }
+	.social-media__icon {
+		display: inline-block;
+		margin: 10px;
+		font-size: 3em;
+	}
+
+.footer-bottom {
+	padding: 20px;
+	text-align: center;
+	background-color: $footer-dark;
+}
