--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -3,6 +3,7 @@
 //Colors
 $verde_dark   : #007f80;
 $verde_base   : #00b1b3;
+$azul_dark    : #233140;
 $azul_base    : #1d5086;
 $azul_cinza   : #2c3e50;
 $cinza_dark   : #3b3f44;
@@ -22,5 +23,5 @@ $section_color: $cinza_lighter;
 $section_color_darker : $cinza_light;
 
 $footer_color : $azul_cinza;
-
+$footer_dark  : $azul_dark;
 $input_border : $cinza_lighter;
