--- a/src/styles/partials/_home.scss
+++ b/src/styles/partials/_home.scss
@@ -54,13 +54,15 @@ body {
 }
 
 .work-item {
+	max-width: 360px;
+	overflow: hidden;
 	text-align: center;
 	border-bottom: 1px solid $section-color;
 	padding-bottom: 10px;
 	margin-bottom: 20px;
 	img {
-		width: 100%;
-		max-height: 260px;
+		min-width: 100%;
+		height: 260px;
 	}
 
 	&:last-child {
