--- a/src/styles/partials/_home.scss
+++ b/src/styles/partials/_home.scss
@@ -54,14 +54,12 @@ body {
 }
 
 .work-item {
-	max-width: 360px;
-	overflow: hidden;
 	text-align: center;
 	border-bottom: 1px solid $section-color;
 	padding-bottom: 10px;
 	margin-bottom: 20px;
 	img {
-		min-width: 100%;
+		width: 100%;
 		height: 260px;
 	}
 
@@ -71,6 +69,8 @@ body {
 
 	@include breakpoint(mouse) {
 		border: none;
+		max-width: 360px;
+		overflow: hidden;
 	}
 }
 	.work-item__title {
