added atom animation

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,5 +9,6 @@
 @import "partials/buttons";
 
 @import "partials/home";
+@import "partials/atom";
 @import "partials/header";
 @import "partials/footer";
